fix white text in dark mode in articles

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,9 +33,6 @@ article h4 {
   font-size: 1.3em;
   font-weight: 500;
 }
-article p {
-  color: #222;
-}
 article img {
   width: 100%;
 }
